--- a/index.html
+++ b/index.html
@@ -179,48 +179,31 @@
               <p>Our group will be attending AAAI-26 to present the following works:</p>
               <ul class="aaai-event-list">
                 <li>
-                  <a href="https://arxiv.org/abs/2508.16753" target="_blank"
-                    ><i
-                      >GAICo: A Deployed and Extensible Framework for Evaluating Diverse and
-                      Multimodal Generative AI Outputs</i
-                    ></a
-                  >
-                  (IAAI/AAAI-26)
+                  <a href="https://arxiv.org/abs/2508.16753" target="_blank">
+                    <i>GAICo: A Deployed and Extensible Framework for Evaluating Diverse and Multimodal Generative AI Outputs</i>
+                  </a> (IAAI/AAAI-26)
                   <br /><span class="booth-highlight">Jan 23, Friday</span>
                 </li>
 
                 <li>
-                  <a href="publications/papers_local/GAICO-Demo-AAAI2026.pdf" target="_blank"
-                    ><i
-                      >GAICo: Demonstrating a Unified Framework for Multi-Modal GenAI Evaluation</i
-                    ></a
-                  >
-                  (Demo) <br /><span class="booth-highlight"
-                    >Jan 23, Friday - Booth 12 (Hall 3)</span
-                  >
+                  <a href="publications/papers_local/GAICO-Demo-AAAI2026.pdf" target="_blank">
+                    <i>GAICo: Demonstrating a Unified Framework for Multi-Modal GenAI Evaluation</i>
+                  </a> (Demo)
+                  <br /><span class="booth-highlight">Jan 23, Friday - Booth 12 (Hall 3)</span>
                 </li>
 
                 <li>
-                  <a href="publications/papers_local/AAAI_26_Demo_MAPF_Ontology.pdf" target="_blank"
-                    ><i
-                      >OMEGA: An Ontology-Driven Tool for Explaining Multi-Agent Path Finding</i
-                    ></a
-                  >
-                  (Demo) <br /><span class="booth-highlight"
-                    >Jan 24, Saturday - Booth 6 (Hall 2)</span
-                  >
+                  <a href="publications/papers_local/AAAI_26_Demo_MAPF_Ontology.pdf" target="_blank">
+                    <i>OMEGA: An Ontology-Driven Tool for Explaining Multi-Agent Path Finding</i>
+                  </a> (Demo)
+                  <br /><span class="booth-highlight">Jan 24, Saturday - Booth 6 (Hall 2)</span>
                 </li>
 
                 <li>
-                  <a href="publications/papers_local/chatsparent_aaai_demo.pdf" target="_blank"
-                    ><i
-                      >Chatsparent: An Interactive System for Detecting and Mitigating Cognitive
-                      Fatigue in LLMs</i
-                    ></a
-                  >
-                  (Demo) <br /><span class="booth-highlight"
-                    >Jan 23, Friday - Booth 5 (Hall 2)</span
-                  >
+                  <a href="publications/papers_local/chatsparent_aaai_demo.pdf" target="_blank">
+                    <i>Chatsparent: An Interactive System for Detecting and Mitigating Cognitive Fatigue in LLMs</i>
+                  </a> (Demo)
+                  <br /><span class="booth-highlight">Jan 23, Friday - Booth 5 (Hall 2)</span>
                 </li>
               </ul>
             </div>
@@ -332,6 +315,12 @@
               <div class="poster-carousel-wrapper">
                 <div class="poster-slide active" data-poster-url="spotlight/omega_poster_AAAI-2026.png" data-caption="OMEGA - AAAI 2026">
                   <img src="spotlight/omega_poster_AAAI-2026.png" alt="OMEGA - AAAI 2026" class="poster-carousel-img" />
+                </div>
+                <div class="poster-slide" data-poster-url="spotlight/poster_GAICo.png" data-caption="GAICo Demo - AAAI 2026">
+                  <img src="spotlight/poster_GAICo.png" alt="GAICo Demo - AAAI 2026" class="poster-carousel-img" />
+                </div>
+                <div class="poster-slide" data-poster-url="spotlight/NeurIPS-24-Poster.png" data-caption="MisInfo - NeurIPS 2025">
+                  <img src="spotlight/NeurIPS-24-Poster.png" alt="MisInfo - NeurIPS 2025" class="poster-carousel-img" />
                 </div>
                 <div class="poster-slide" data-poster-url="spotlight/AAAI-IAAI-2024-ULTRA-Poster.png" data-caption="ULTRA - AAAI 2024">
                   <img src="spotlight/AAAI-IAAI-2024-ULTRA-Poster.png" alt="ULTRA - AAAI 2024" class="poster-carousel-img" />
@@ -464,6 +453,11 @@
           <a href="projects/ontology/files/omega_poster_AAAI-2026.pdf" target="_blank" class="poster-popup-item">
             <img src="spotlight/omega_poster_AAAI-2026.png" alt="OMEGA - AAAI 2026" class="poster-popup-thumbnail" />
             <div class="poster-popup-caption">OMEGA - AAAI 2026</div>
+          </a>
+
+          <a href="publications/papers_local/GAICO-Demo-AAAI2026.pdf" target="_blank" class="poster-popup-item">
+            <img src="spotlight/poster_GAICo.png" alt="GAICo Demo - AAAI 2026" class="poster-popup-thumbnail" />
+            <div class="poster-popup-caption">GAICo Demo - AAAI 2026</div>
           </a>
 
           <!-- NeurIPS 2025 -->
