--- a/publications/index.html
+++ b/publications/index.html
@@ -135,8 +135,8 @@
                                 Pallav Koppisetti, Nitin Gupta, Kausik Lakkaraju, Biplav Srivastava
                                 <br>
                                 <a href='https://arxiv.org/abs/2508.16753' target="_blank">[Paper]</a>
-                                <a href='https://drive.google.com/file/d/1m93agi6H4-HDpIvZCiYOOw6RpYEIQbvD/view'
-                                    target="_blank">[Video]</a>
+                                <a href='https://drive.google.com/file/d/1m93agi6H4-HDpIvZCiYOOw6RpYEIQbvD/view' target="_blank">[Video]</a>
+                                <a href='papers_local/GAICO-Demo-AAAI2026.pdf' target="_blank">[Poster]</a>
                                 <span class="tag tag-type">Demo</span>
                                 <span class="tag tag-method">Trust Rating</span>
                                 <br>
