More publication posters added

--- a/publications/index.html
+++ b/publications/index.html
@@ -120,7 +120,7 @@
               </div>
               <div class="paper-poster">
                 <a
-                  href="papers_local/GAICO-Demo-AAAI2026.pdf"
+                  href="../spotlight/poster_GAICo.png"
                   target="_blank"
                   title="Click to view full poster"
                   aria-label="View poster for GAICo: Demonstrating a Unified Framework for Multi-Modal GenAI Evaluation"
@@ -169,7 +169,7 @@
               </div>
               <div class="paper-poster">
                 <a
-                  href="papers_local/GAICO-Demo-AAAI2026.pdf"
+                  href="../spotlight/poster_GAICo.png"
                   target="_blank"
                   title="Click to view full poster"
                   aria-label="View poster for GAICo: Demonstrating a Unified Framework for Multi-Modal GenAI Evaluation"
@@ -206,7 +206,7 @@
               </div>
               <div class="paper-poster">
                 <a
-                  href="../projects/ontology/files/omega_poster_AAAI-2026.pdf"
+                  href="../spotlight/omega_poster_AAAI-2026.png"
                   target="_blank"
                   title="Click to view full poster"
                   aria-label="View poster for OMEGA: An Ontology-Driven Tool for Explaining Multi-Agent Path Finding"
@@ -659,7 +659,7 @@
               </div>
               <div class="paper-poster">
                 <a
-                  href="./papers_local/AAAI-IAAI-2024-ULTRA-Poster.pdf"
+                  href="../spotlight/AAAI-IAAI-2024-ULTRA-Poster.png"
                   target="_blank"
                   title="Click to view full poster"
                   aria-label="View poster for Promoting Research Collaboration with Open Data Driven Team Recommendation in Response to Call for Proposals"
@@ -698,7 +698,7 @@
               </div>
               <div class="paper-poster">
                 <a
-                  href="./papers_local/AAAI-24_Demo_Poster.pdf"
+                  href="../spotlight/AAAI-24_Demo_Poster.png"
                   target="_blank"
                   title="Click to view full poster"
                   aria-label="View poster for Expressive and Flexible Simulation of Information Spread Strategies in Social Networks Using Planning"
@@ -962,22 +962,40 @@
             <br />
           </li>
 
-          <li>
-            <b
-              >A Dataset and Baseline Approach for Identifying Usage States from Non-Intrusive Power Sensing With MiDAS
-              IoT-based Sensors</b
-            ><br />
-            <i
-              >Proc. Thirty-Fifth Annual Conference on Innovative Applications of Artificial Intelligence
-              (AAAI/IAAI-23)</i
-            ><br />
-            Bharath Muppasani, Cheyyur Jaya Anand, Chinmayi Appajigowda, Biplav Srivastava, Lokesh Johri<br />
-            <a href="https://arxiv.org/pdf/2209.00987.pdf" target="_blank">[Paper]</a>
-            <a href="./presentations/PowerIoT_IAAI_Presentation.pdf" target="_blank">[Slides]</a>
-            <span class="tag tag-type">Conference</span>
-            <span class="tag tag-method">Data Analysis</span>
-            <span class="tag tag-domain">Power IoT</span>
-            <br />
+          <li class="paper-has-poster">
+            <div class="paper-item-layout">
+              <div class="paper-details">
+                <b
+                  >A Dataset and Baseline Approach for Identifying Usage States from Non-Intrusive Power Sensing With
+                  MiDAS IoT-based Sensors</b
+                ><br />
+                <i
+                  >Proc. Thirty-Fifth Annual Conference on Innovative Applications of Artificial Intelligence
+                  (AAAI/IAAI-23)</i
+                ><br />
+                Bharath Muppasani, Cheyyur Jaya Anand, Chinmayi Appajigowda, Biplav Srivastava, Lokesh Johri
+                <br />
+                <a href="https://arxiv.org/pdf/2209.00987.pdf" target="_blank">[Paper]</a>
+                <a href="./presentations/PowerIoT_IAAI_Presentation.pdf" target="_blank">[Slides]</a>
+                <span class="tag tag-type">Conference</span>
+                <span class="tag tag-method">Data Analysis</span>
+                <span class="tag tag-domain">Power IoT</span>
+                <br />
+              </div>
+              <div class="paper-poster">
+                <a
+                  href="../spotlight/power-IAAI.jpg"
+                  target="_blank"
+                  title="Click to view full poster"
+                  aria-label="View poster for A Dataset and Baseline Approach for Identifying Usage States from Non-Intrusive Power Sensing With MiDAS IoT-based Sensors"
+                >
+                  <img
+                    src="../spotlight/power-IAAI.jpg"
+                    alt="Poster thumbnail for A Dataset and Baseline Approach for Identifying Usage States from Non-Intrusive Power Sensing With MiDAS IoT-based Sensors"
+                  />
+                </a>
+              </div>
+            </div>
           </li>
 
           <li>
