--- a/publications/index.html
+++ b/publications/index.html
@@ -1082,6 +1082,19 @@
 
         <h2>2021</h2>
         <ul class="papers-list">
+
+          <li>
+            <b>Did Chatbots Miss Their 'Apollo Moment'? A Survey of the Potential, Gaps and Lessons from Using 
+              Collaboration Assistants During COVID-19</b><br />
+            <i>Cell PATTERNS, 2021</i><br />
+            Biplav Srivastava<br />
+            <a href="https://www.sciencedirect.com/science/article/pii/S2666389921001513" target="_blank">[Paper]</a>
+            <span class="tag tag-type">Journal</span>
+            <span class="tag tag-method">Chatbots</span>
+            <span class="tag tag-domain">Health</span>
+            <br />
+          </li> 
+          
           <li>
             <b>Thinking Fast and Slow in AI: the Role of Metacognition</b><br />
             <i>International Conference on Machine Learning, Optimization, and Data Science</i><br />
@@ -1197,3 +1210,4 @@
     </script>
   </body>
 </html>
+
